--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,9 +18,6 @@ build:
   apt_packages:
     - libcurl4-openssl-dev
     - libssl-dev
-  jobs:
-    pre_install:
-      - pip install setuptools==68.2.2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -31,5 +28,9 @@ sphinx:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-   install:
-   - requirements: requirements-docs.txt
+  install:
+    - method: pip
+      path: .
+      constraints: constraints.txt
+    - requirements: requirements-docs.txt
+      constraints: constraints.txt
