--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -19,6 +19,11 @@ build:
     - libcurl4-openssl-dev
     - libssl-dev
 
+  jobs:
+    pre_create_environment:
+      - pip install -U pip
+      - pip install setuptools==68.2.2
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/conf.py
@@ -28,9 +33,5 @@ sphinx:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-  install:
-    - method: pip
-      path: .
-      constraints: constraints.txt
-    - requirements: requirements-docs.txt
-      constraints: constraints.txt
+   install:
+   - requirements: requirements-docs.txt
