--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -23,6 +23,7 @@ build:
     pre_create_environment:
       - pip install -U pip
       - pip install setuptools==68.2.2
+      - pip install pip==23.3.1
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
