--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -24,6 +24,7 @@ build:
       - pip install -U pip
       - pip install setuptools==68.2.2
       - pip install pip==23.3.1
+      - pip install pytest-jira==0.3.21
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
