--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,9 +18,6 @@ build:
   apt_packages:
     - libcurl4-openssl-dev
     - libssl-dev
-  environment:
-    PIP_DISABLE_PIP_VERSION_CHECK: "1"
-    READTHEDOCS_PIP_DISABLE_PIP_UPGRADE: "1"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -28,6 +25,10 @@ sphinx:
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats: all
+
+env:
+  PIP_DISABLE_PIP_VERSION_CHECK: "1"
+  READTHEDOCS_PIP_DISABLE_PIP_UPGRADE: "1"
 
 # Optionally declare the Python requirements required to build your docs
 python:
