--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -1,8 +1,13 @@
+# Explicitly define versions for documentation build dependencies
 pip==23.3.1
 setuptools==68.2.2
+
+# Documentation dependencies
 sphinx==7.0.0
 sphinx-autopackagesummary==1.3
 sphinx_rtd_theme== 2.0.0
 recommonmark==0.7.1
 myst-parser
--r requirements.txt
+
+# Install the package in development mode - this ensures all dependencies are installed
+-e .
