--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,25 +1,20 @@
 ---
 version: 2
 
-# Set the OS and Python version
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+# Set the version of Python and other tools
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"  # Match your setup.py requirement: ">=3.9.18"
+    python: "3.9"
   apt_packages:
     - libcurl4-openssl-dev
     - libssl-dev
 
-# Build documentation with Sphinx
-sphinx:
-  configuration: docs/conf.py
-
-# Environment variables
-env:
-  PIP_DISABLE_PIP_VERSION_CHECK: "1"
-  READTHEDOCS_PIP_DISABLE_PIP_UPGRADE: "1"
-
-# Python configuration
+# Python requirements
 python:
   install:
     - requirements: requirements-docs.txt
