--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -1,6 +1,6 @@
 ENV_DATA:
   dr_workload_repo_url: "https://github.com/red-hat-storage/ocs-workloads.git"
-  dr_workload_repo_branch: "master"
+  dr_workload_repo_branch: "release-4.16"
   dr_workload_subscription: [
     {name: "busybox-1", workload_dir: "rdr/busybox/app-busybox-1", pod_count: 20, pvc_count: 20},
     {name: "busybox-2", workload_dir: "rdr/busybox/app-busybox-2", pod_count: 5, pvc_count: 5},
