object-storage-hostnetwork-check
Signed-off-by: Daniel Osypenko <dosypenk@redhat.com>

--- a/ocs_ci/templates/ocs-deployment/provider-mode/ocs_storagecluster_converged.yaml
+++ b/ocs_ci/templates/ocs-deployment/provider-mode/ocs_storagecluster_converged.yaml
@@ -18,6 +18,7 @@ spec:
     cephFilesystems: {}
     cephNonResilientPools: {}
     cephObjectStoreUsers: {}
+    # cephObjectStores.hostNetwork setting follows the bz DFBUGS-2324
     cephObjectStores:
       hostNetwork: false
     cephRBDMirror: {}
