--- a/ocs_ci/templates/acm-deployment/submariner_broker.yaml
+++ b/ocs_ci/templates/acm-deployment/submariner_broker.yaml
@@ -2,7 +2,7 @@ apiVersion: submariner.io/v1alpha1
 kind: Broker
 metadata:
   name: submariner-broker
-  namespace: submariner-broker
+  namespace: PLACEHOLDER
   labels:
     cluster.open-cluster-management.io/backup: submariner
 spec:
