--- a/ocs_ci/templates/acm-deployment/clusterset.yaml
+++ b/ocs_ci/templates/acm-deployment/clusterset.yaml
@@ -1,4 +1,4 @@
-apiVersion: cluster.open-cluster-management.io/v1alpha1
+apiVersion: cluster.open-cluster-management.io/v1beta2
 kind: ManagedClusterSet
 metadata:
   name: PLACEHOLDER
