update tox syntax (change {} to {:})
Signed-off-by: Daniel Horak <dahorak@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -73,4 +73,4 @@ deps =
 skip_install = true
 skipsdist = true
 commands =
-    bash -c 'git grep --name-only retry | grep -E "\.py$" | xargs -I {} python scripts/python/checks/validate_retry_usage.py {}'
+    bash -c 'git grep --name-only retry | grep -E "\.py$" | xargs -I {:} python scripts/python/checks/validate_retry_usage.py {:}'
