Adding Resiliency POD distruption scenarios
Signed-off-by: Parag Kamble <pakamble@redhat.com>

--- a/ocs_ci/resiliency/conf/resiliency.yaml
+++ b/ocs_ci/resiliency/conf/resiliency.yaml
@@ -11,10 +11,12 @@ RESILIENCY:
       - PLATFORM_NETWORK_FAILURES
       - PLATFORM_DISK_FAILURES
       - PLATFORM_NETWORK_FAULTS
-    APPLICATION_FAILURES:
-      - NODE_REBOOT
-      - NODE_FAILURES
-      - NETWORK_FAILURES
+    STORAGECLUSTER_COMPONENT_FAILURES:
+      - OSD_POD_FAILURES
+      - MDS_POD_FAILURES
+      - MON_POD_FAILURES
+      - RBD_POD_FAILURES
+      - CEPHFS_POD_FAILURES
     OCS_FAILURES:
       - OCS_POD_FAILURES
       - OCS_NODE_FAILURES
