--- a/ocs_ci/templates/ocs-deployment/local-storage-optional-operators.yaml
+++ b/ocs_ci/templates/ocs-deployment/local-storage-optional-operators.yaml
@@ -27,6 +27,6 @@ spec:
   icon:
     base64data: ""
     mediatype: ""
-  image: quay.io/openshift-qe-optional-operators/aosqe-index:v4.18
+  image: quay.io/openshift-qe-optional-operators/aosqe-index:v{}
   publisher: Red Hat
   sourceType: grpc
