--- a/ocs_ci/templates/ocs-deployment/provider-mode/native_storage_client.yaml
+++ b/ocs_ci/templates/ocs-deployment/provider-mode/native_storage_client.yaml
@@ -1,7 +1,7 @@
 apiVersion: ocs.openshift.io/v1alpha1
 kind: StorageClient
 metadata:
-  name: storage-client
+  name: ocs-storagecluster
   namespace: openshift-storage-client
 spec:
   storageProviderEndpoint: PLACEHOLDER1
