--- a/conf/deployment/vsphere/upi_1az_rhcos_multus_public_vsan_3m_3w.yaml
+++ b/conf/deployment/vsphere/upi_1az_rhcos_multus_public_vsan_3m_3w.yaml
@@ -14,6 +14,7 @@ ENV_DATA:
   fio_storageutilization_min_mbps: 10.0
   is_multus_enabled: true
   multus_create_public_net: true
+  multus_public_net_interface: "ens224"
   multus_create_cluster_net: false
   multus_public_net_namespace: "default"
 REPORTING:
