Remove python 3.9 support
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = black,py39,py310,py311,flake8,docs,collectonly,logging
+envlist = black,py310,py311,flake8,docs,collectonly,logging
 
 [gh-actions]
 python =
-    3.9: py39, flake8, collectonly
-    3.10: py39, flake8, collectonly
-    3.11: py311, black, docs, flake8, collectonly, logging
+    3.10: py310, flake8, collectonly
+    3.11: py311, black, docs, flake8, collectonly, logging, retry-check
 
 [testenv]
 deps =
