Fix OADP required version available
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/ocs_ci/framework/conf/ocp_version/ocp-4.19-config.yaml
+++ b/ocs_ci/framework/conf/ocp_version/ocp-4.19-config.yaml
@@ -17,3 +17,4 @@ ENV_DATA:
   submariner_source: "downstream"
   submariner_release_type: "unreleased"
   acm_hub_unreleased: true
+  oadp_version: "1.5"
