Set unreleased subctl version in ocp 4.19 config
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/ocs_ci/framework/conf/ocp_version/ocp-4.19-config.yaml
+++ b/ocs_ci/framework/conf/ocp_version/ocp-4.19-config.yaml
@@ -16,5 +16,6 @@ ENV_DATA:
   # Below values needs to be changed when acm and submariner are GAed
   submariner_source: "downstream"
   submariner_release_type: "unreleased"
+  subctl_version: "subctl-rhel9:v0.20"
   acm_hub_unreleased: true
   oadp_version: "1.5"
