--- a/ocs_ci/templates/acm-deployment/submariner_downstream_brew_idms.yaml
+++ b/ocs_ci/templates/acm-deployment/submariner_downstream_brew_idms.yaml
@@ -1,4 +1,4 @@
-apiVersion: operator.openshift.io/v1alpha1
+apiVersion: config.openshift.io/v1
 kind: ImageDigestMirrorSet
 metadata:
   name: brew-registry
