--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -63,6 +63,7 @@ ENV_DATA:
     },
   ]
 
+
   dr_workload_appset_cephfs: [
     { name: "appset-busybox-1", workload_dir: "rdr/busybox/cephfs/appset/appset-busybox-1-cephfs.yaml",
       dr_workload_app_placement_name: "busybox-1-placement-cephfs",
@@ -159,6 +160,20 @@ ENV_DATA:
       dr_workload_app_placement_name: "busybox-dict-2-cephfs",
       multi_ns_dr_workload_app_pvc_selector_key: "workloadpattern",
       multi_ns_dr_workload_app_pvc_selector_value: "simple_io_pvc",
+    },
+  ]
+
+  dr_workload_discovered_apps_mix: [
+    { name: "busybox-dict-1-mix", workload_dir: "rdr/busybox/mix-workload/deployment",
+      pod_count: 6, pvc_count: 6,
+      dr_workload_app_pod_selector_key: "workloadpattern",
+      dr_workload_app_pod_selector_value: "simple_io",
+      dr_workload_app_pvc_selector_key: "appname",
+      dr_workload_app_pvc_selector_value: "busybox_app_mix",
+      workload_namespace: "busybox-dict-1-mix",
+      dr_workload_app_placement_name: "busybox-dict-1-mix",
+      mix_workload_rbd_pvc_count: 3,
+      mix_workload_cephfs_pvc_count: 3,
     },
   ]
   dr_workload_subscription_placement_rbd: [
