--- a/ocs_ci/templates/ocs-deployment/multicluster/odf_orchestrator_operatorgroup.yaml
+++ b/ocs_ci/templates/ocs-deployment/multicluster/odf_orchestrator_operatorgroup.yaml
@@ -4,3 +4,6 @@ kind: OperatorGroup
 metadata:
   name: odf-orchestrator-operatorgroup
   namespace: openshift-operators
+spec:
+  targetNamespaces:
+    - openshift-storage-client
