code correction-WIP
Signed-off-by: am-agrawa <amagrawa@redhat.com>

--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -235,4 +235,19 @@ ENV_DATA:
     }
   ]
 
+  dr_cnv_discovered_apps_shared: [
+    {
+      name: "vm-discovered-2", workload_dir: "rdr/cnv-workload/vm-resources/vm-workload-2",
+      pod_count: 1, pvc_count: 1,
+      dr_workload_app_pod_selector_key: "appname",
+      dr_workload_app_pod_selector_value: "kubevirt",
+      dr_workload_app_pvc_selector_key: "appname",
+      dr_workload_app_pvc_selector_value: "kubevirt",
+      workload_namespace: "cnv-dict-2",
+      dr_workload_app_placement_name: "cnv-dict-2",
+      vm_name: "vm-workload-2",
+      vm_secret: "vm-secret-1", vm_username: "cirros",
+    }
+  ]
+
   # dr_policy_name: PLACEHOLDER
