--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -213,9 +213,24 @@ ENV_DATA:
       dr_workload_app_pod_selector_value: "kubevirt",
       dr_workload_app_pvc_selector_key: "appname",
       dr_workload_app_pvc_selector_value: "kubevirt",
-      workload_namespace: "cnv-dict-ff",
-      dr_workload_app_placement_name: "cnv-dict-ff",
+      workload_namespace: "cnv-dict-gg",
+      dr_workload_app_placement_name: "cnv-dict-gg",
       vm_name: "vm-workload-1",
+      vm_secret: "vm-secret-1", vm_username: "cirros",
+    }
+  ]
+
+  dr_cnv_discovered_apps_shared: [
+    {
+      name: "vm-discovered-2", workload_dir: "rdr/cnv-workload/vm-resources/vm-workload-2",
+      pod_count: 1, pvc_count: 1,
+      dr_workload_app_pod_selector_key: "appname",
+      dr_workload_app_pod_selector_value: "kubevirt",
+      dr_workload_app_pvc_selector_key: "appname",
+      dr_workload_app_pvc_selector_value: "kubevirt",
+      workload_namespace: "cnv-dict-gg",
+      dr_workload_app_placement_name: "cnv-dict-gg",
+      vm_name: "vm-workload-2",
       vm_secret: "vm-secret-1", vm_username: "cirros",
     }
   ]
@@ -231,21 +246,6 @@ ENV_DATA:
       workload_namespace: "cnv-dict-1-custom",
       dr_workload_app_placement_name: "cnv-dict-1",
       vm_name: "vm-workload-1",
-      vm_secret: "vm-secret-1", vm_username: "cirros",
-    }
-  ]
-
-  dr_cnv_discovered_apps_shared: [
-    {
-      name: "vm-discovered-2", workload_dir: "rdr/cnv-workload/vm-resources/vm-workload-2",
-      pod_count: 1, pvc_count: 1,
-      dr_workload_app_pod_selector_key: "appname",
-      dr_workload_app_pod_selector_value: "kubevirt",
-      dr_workload_app_pvc_selector_key: "appname",
-      dr_workload_app_pvc_selector_value: "kubevirt",
-      workload_namespace: "cnv-dict-ff",
-      dr_workload_app_placement_name: "cnv-dict-ff",
-      vm_name: "vm-workload-2",
       vm_secret: "vm-secret-1", vm_username: "cirros",
     }
   ]
