--- a/conf/deployment/ibmcloud/ipi_3az_rhcos_compactmode_3m_0w.yaml
+++ b/conf/deployment/ibmcloud/ipi_3az_rhcos_compactmode_3m_0w.yaml
@@ -7,8 +7,13 @@ ENV_DATA:
   deployment_type: 'ipi'
   region: 'us-east'
   base_domain: 'ibmcloud2.qe.rh-ocs.com'
+  worker_instance_type: 'bx2-16x64'
   master_instance_type: 'bx2-8x32'
   master_availability_zones:
+    - 'us-east-1'
+    - 'us-east-2'
+    - 'us-east-3'
+  worker_availability_zones:
     - 'us-east-1'
     - 'us-east-2'
     - 'us-east-3'
