--- a/conf/deployment/baremetal/upi_1az_rhcos_nvme_intel_2m_1arbiter.yaml
+++ b/conf/deployment/baremetal/upi_1az_rhcos_nvme_intel_2m_1arbiter.yaml
@@ -17,11 +17,9 @@ DEPLOYMENT:
   custom_arbiter_condition: null
 ENV_DATA:
   platform: 'baremetal'
-  deployment_type: 'upi'
+  deployment_type: 'ai'
   worker_replicas: 0
   master_replicas: 3
-  mon_type: 'hostpath'
-  osd_type: 'nvme'
   worker_num_cpus: '16'
   master_num_cpus: '4'
   master_memory: '16384'
