--- a/ocs_ci/templates/mce-deployment/mce_subscription.yaml
+++ b/ocs_ci/templates/mce-deployment/mce_subscription.yaml
@@ -9,5 +9,5 @@ spec:
   channel: stable-2.9
   installPlanApproval: Automatic
   name: multicluster-engine
-  source: qe-app-registry
+  source: {}
   sourceNamespace: openshift-marketplace
