mce channel assign modified
Signed-off-by: Daniel Osypenko <dosypenk@redhat.com>

--- a/ocs_ci/templates/mce-deployment/mce_subscription.yaml
+++ b/ocs_ci/templates/mce-deployment/mce_subscription.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     operators.coreos.com/multicluster-engine.multicluster-engine: ""
 spec:
-  channel: stable-2.9
+  channel: {}
   installPlanApproval: Automatic
   name: multicluster-engine
   source: {}
