change mode to local
Signed-off-by: abdul-aleem3 <abdul.aleem3@ibm.com>

--- a/ocs_ci/templates/fusion-data-foundation/data-foundation-instance.yaml
+++ b/ocs_ci/templates/fusion-data-foundation/data-foundation-instance.yaml
@@ -15,7 +15,7 @@ spec:
     value: Fusion
   - name: backingStorageType
     provided: true
-    value: Dynamic
+    value: Local
   - name: autoUpgrade
     provided: false
     value: "false"
