Fix KeyError 'selector' in test_verify_rwo_using_dc_pod.py and related DC issues
Signed-off-by: Parag Kamble <pakamble@redhat.com>

--- a/ocs_ci/templates/app-pods/fedora_dc.yaml
+++ b/ocs_ci/templates/app-pods/fedora_dc.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: fedorapod
 spec:
+  selector:
+    matchLabels:
+      name: fedorapod
   template:
     metadata:
       labels:
