--- a/ocs_ci/templates/app-pods/golang.yaml
+++ b/ocs_ci/templates/app-pods/golang.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: hsbenchpod
 spec:
+  selector:
+    matchLabels:
+      app: hsbenchpod
   template:
     metadata:
       labels:
