--- a/ocs_ci/templates/app-pods/performance_dc.yaml
+++ b/ocs_ci/templates/app-pods/performance_dc.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: perfpod
 spec:
+  selector:
+    matchLabels:
+      name: perfpod
   template:
     metadata:
       labels:
