--- a/ocs_ci/templates/workloads/amq/kafkadrop.yaml
+++ b/ocs_ci/templates/workloads/amq/kafkadrop.yaml
@@ -2,9 +2,12 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   name: kafdrop
+  labels:
+    app: kafdrop
 spec:
   selector:
-    app: kafdrop
+    matchLabels:
+      app: kafdrop
   replicas: 1
   template:
     metadata:
