--- a/ocs_ci/templates/workloads/fio/fio_dc.yaml
+++ b/ocs_ci/templates/workloads/fio/fio_dc.yaml
@@ -6,6 +6,9 @@ metadata:
     app: fio-benchmark
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: fio-benchmark
   template:
     metadata:
       labels:
