--- a/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
+++ b/conf/examples/provider_mode_ibm_cloud_baremetal_kubevirt_clients.yaml
@@ -23,23 +23,23 @@ ENV_DATA:
   deploy_mce: false # second option to enable multicluster setup; used instead of ACM
   clusters: # the list of the Hosted clusters and their configuration. If field does not exist HostedClsuter installation will be skipped
     hcp415-bm3-e: # the field name is the name of the Hosted cluster
-      hosted_cluster_path: "~/clusters/hcp416-bm3-e/openshift-cluster-dir" # path to store auth_path dir or cluster related files
+      cluster_path: "~/clusters/hcp416-bm3-e/openshift-cluster-dir" # path to store auth_path dir or cluster related files
       ocp_version:  "4.15.13" # this is an example, please provide the desired OCP version
       cpu_cores_per_hosted_cluster: 6 # minimal, tested value for the kubevirt cluster is 6
       memory_per_hosted_cluster: "12Gi" # minimal, tested value for the kubevirt cluster is 12Gi
-      hosted_odf_registry: "quay.io/rhceph-dev/ocs-registry" # this is an example, please provide the desired registry
-      hosted_odf_version: "4.16.0-99" # this is an example, please provide the desired version
+      odf_registry: "quay.io/rhceph-dev/ocs-registry" # this is an example, please provide the desired registry
+      odf_version: "4.16.0-99" # this is an example, please provide the desired version
       setup_storage_client: true # if true, the Storage Client will be created and verification will be performed
       nodepool_replicas: 3 # number of worker nodes created for Hosted cluster
       cp_availability_policy: "HighlyAvailable" # this field is optional, if not provided the default value is "HighlyAvailable"
       storage_quota: 100  # int. 100 means "100Gi". this field is optional, if not provided client will have unlimited storage quota
       infra_availability_policy: "HighlyAvailable" # this field is optional, if not provided the default value is "HighlyAvailable"
     hcp415-bm3-f:
-      hosted_cluster_path: "~/clusters/hcp416-bm3-f/openshift-cluster-dir" # path to store auth_path dir or cluster related files
+      cluster_path: "~/clusters/hcp416-bm3-f/openshift-cluster-dir" # path to store auth_path dir or cluster related files
       ocp_version:  "4.15.10" # this is an example, please provide the desired OCP version
       cpu_cores_per_hosted_cluster: 8 # minimal, tested value for the kubevirt cluster is 6
       memory_per_hosted_cluster: "12Gi" # minimal, tested value for the kubevirt cluster is 12Gi
-      hosted_odf_registry: "quay.io/rhceph-dev/ocs-registry" # this is an example, please provide the desired registry
-      hosted_odf_version: "4.16.0-106" # this is an example, please provide the desired version
+      odf_registry: "quay.io/rhceph-dev/ocs-registry" # this is an example, please provide the desired registry
+      odf_version: "4.16.0-106" # this is an example, please provide the desired version
       setup_storage_client: true # if true, the Storage Client will be created and verification will be performed
       nodepool_replicas: 2 # number of worker nodes created for Hosted cluster
