Data replication separation deployment
Signed-off-by: fbalak <fbalak@redhat.com>

--- a/ocs_ci/framework/conf/default_config.yaml
+++ b/ocs_ci/framework/conf/default_config.yaml
@@ -131,6 +131,7 @@ DEPLOYMENT:
   fusion_channel: v2.0
   enable_nested_virtualization: False # Enable nested virtualization on the cluster nodes
   host_network: False # Use host network for ODF pods, propagates to spec of StorageCluster. Mandatory for Hub/Spoke deployments.
+  enable_data_separation_replication: False # separates client data path from data replication
 
 
 # Section for reporting configuration
