Discovered apps with exechook config
Signed-off-by: Shrivaibavi Raghaventhiran <sraghave@redhat.com>

--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -119,7 +119,7 @@ ENV_DATA:
       dr_workload_app_recipe_name_value: "busybox-dict-1",
       dr_workload_app_recipe_namespace_key: "namespace",
       dr_workload_app_recipe_namespace_value: "busybox-dict-1",
-      dr_workload_app_recipe_name_selector_value: "busybox-*",
+      dr_workload_app_recipe_name_selector_value: "^busybox-.*",
     },
      { name: "busybox-dict-2-rbd", workload_dir: "rdr/busybox/rbd/workloads/app-busybox-2",
        pod_count: 10, pvc_count: 10,
@@ -148,7 +148,7 @@ ENV_DATA:
       dr_workload_app_recipe_name_value: "busybox-dict-1",
       dr_workload_app_recipe_namespace_key: "namespace",
       dr_workload_app_recipe_namespace_value: "busybox-dict-1",
-      dr_workload_app_recipe_name_selector_value: "busybox-*",
+      dr_workload_app_recipe_name_selector_value: "^busybox-.*",
     },
     { name: "busybox-dict-2-cephfs", workload_dir: "rdr/busybox/cephfs/workloads/app-busybox-2",
       pod_count: 10, pvc_count: 10,
