--- a/ocs_ci/templates/DR/drpc_with_recipe.yaml
+++ b/ocs_ci/templates/DR/drpc_with_recipe.yaml
@@ -19,4 +19,6 @@ spec:
     recipeRef:
       name: PLACEHOLDER
       namespace: PLACEHOLDER
+  protectedNamespaces:
+  - PLACEHOLDER
   pvcSelector: {}
