--- a/conf/ocsci/dr_workload.yaml
+++ b/conf/ocsci/dr_workload.yaml
@@ -251,4 +251,23 @@ ENV_DATA:
     }
   ]
 
+  dr_workload_appset_rbd_vr_offload: [
+      {
+      name: "busybox-dict-1-rbd", workload_dir: "agnostic-rdr/busybox/rbd",
+      pod_count: 1, pvc_count: 1,
+      dr_workload_app_pod_selector_key: "workloadpattern",
+      dr_workload_app_pod_selector_value: "simple_io",
+      dr_workload_app_pvc_selector_key: "appname",
+      dr_workload_app_pvc_selector_value: "busybox_app1",
+      workload_namespace: "busybox-dict-1-rbd",
+      dr_workload_app_placement_name: "busybox-dict-1-rbd",
+      multi_ns_dr_workload_app_pvc_selector_key: "workloadpattern",
+      multi_ns_dr_workload_app_pvc_selector_value: "simple_io_pvc",
+      dr_workload_app_recipe_name_key: "name",
+      dr_workload_app_recipe_name_value: "busybox-dict-1",
+      dr_workload_app_recipe_namespace_key: "namespace",
+      dr_workload_app_recipe_namespace_value: "busybox-dict-1",
+      dr_workload_app_recipe_name_selector_value: "busybox-*",
+    },]
+
   # dr_policy_name: PLACEHOLDER
