--- a/ocs_ci/framework/conf/default_config.yaml
+++ b/ocs_ci/framework/conf/default_config.yaml
@@ -153,8 +153,8 @@ REPORTING:
 # This is the default information about environment.
 ENV_DATA:
   cluster_name: null  # will be changed in ocscilib plugin
-  storage_cluster_name: 'ocs-storagecluster'
-  storage_client_name: "storage-client"
+  storage_cluster_name: "ocs-storagecluster"
+  storage_client_name: "ocs-storagecluster"
   storage_device_sets_name: "storageDeviceSets"
   sno: false
   cluster_namespace: 'openshift-storage'
