Adding Detect Secrets pre-commit hook
Signed-off-by: Petr Balogh <pbalogh@redhat.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,8 @@ repos:
       language: system
       types: [python]
       files: \.py$
+- repo: https://github.com/ibm/detect-secrets
+  rev: 0.13.1+ibm.64.dss
+  hooks:
+    - id: detect-secrets
+      args: [--baseline, .secrets.baseline, --use-all-plugins]
