Update nginx image tag with latest
Signed-off-by: prsurve <prsurve@redhat.com>

--- a/ocs_ci/resiliency/workloads/fio_workload_template.yaml
+++ b/ocs_ci/resiliency/workloads/fio_workload_template.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: fio
-          image: quay.io/ocsci/nginx:fio
+          image: quay.io/ocsci/nginx:latest
           command:
             - fio
           args:
