--- a/ocs_ci/templates/app-pods/raw_block_pod.yaml
+++ b/ocs_ci/templates/app-pods/raw_block_pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: my-container
-      image: quay.io/ocsci/nginx:fio
+      image: quay.io/ocsci/nginx:latest
       securityContext:
          capabilities: {}
       volumeDevices:
