update fio tag to oct16-1
Signed-off-by: prsurve <prsurve@redhat.com>

--- a/ocs_ci/templates/app-pods/ephemeral_fs.yaml
+++ b/ocs_ci/templates/app-pods/ephemeral_fs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
     - name: web-server
-      image: quay.io/ocsci/nginx:latest
+      image: quay.io/ocsci/nginx:oct16-1
       volumeMounts:
         - mountPath: "/scratch"
           name: scratch-volume
