--- a/ocs_ci/resiliency/workloads/fio_workload_template.yaml
+++ b/ocs_ci/resiliency/workloads/fio_workload_template.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: fio
-          image: quay.io/ocsci/nginx:latest
+          image: quay.io/ocsci/nginx:oct16-1
           command:
             - fio
           args:
