Updated namespace for the cnv workload for disconnected app
Signed-off-by: Amrita Mahapatra <49347640+amr1ta@users.noreply.github.com>

--- a/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
+++ b/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
@@ -3,6 +3,7 @@ apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
   name: vm
+  namespace: namespace-cnv-workload
 spec:
   running: true
   template:
