--- a/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
+++ b/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
@@ -1,70 +1,70 @@
----
 apiVersion: kubevirt.io/v1
 kind: VirtualMachine
 metadata:
+  labels:
+    appname: vm
   name: vm
   namespace: namespace-cnv-workload
 spec:
+  dataVolumeTemplates:
+  - metadata:
+      annotations:
+        cdi.kubevirt.io/storage.checkStaticVolume: "true"
+      labels:
+        appname: vm
+      name: root-disk
+    spec:
+      source:
+        registry:
+          certConfigMap: user-ca-bundle
+          secretRef: quayadmin
+          url: docker://r8-ru26-w-l.quay-service.fusion.tadn.ibm.com:8443/ocsci-image/nirsof/cirros:0.6.2-1
+      storage:
+        accessModes:
+        - ReadWriteMany
+        resources:
+          requests:
+            storage: 128Mi
+        storageClassName: ocs-storagecluster-ceph-rbd-virtualization
   running: true
   template:
     metadata:
       labels:
-        kubevirt.io/size: small
         kubevirt.io/domain: vm
+        kubevirt.io/size: small
     spec:
+      accessCredentials:
+      - sshPublicKey:
+          propagationMethod:
+            configDrive: {}
+          source:
+            secret:
+              secretName: my-public-key
       domain:
         devices:
           disks:
-            - name: root-disk
-              disk:
-                bus: virtio
-            - name: cloud-init
-              disk:
-                bus: virtio
+          - disk:
+              bus: virtio
+            name: root-disk
+          - disk:
+              bus: virtio
+            name: cloud-init
           interfaces:
-            - name: default
-              model: virtio
+          - masquerade: {}
+            model: virtio
+            name: default
         resources:
           requests:
-            # See https://github.com/cirros-dev/cirros/issues/53
             memory: 256Mi
       networks:
-        - name: default
-          pod: {}
-      accessCredentials:
-        - sshPublicKey:
-            source:
-              secret:
-                secretName: my-public-key
-            propagationMethod:
-              configDrive: {}
+      - name: default
+        pod: {}
       volumes:
-        - name: root-disk
-          persistentVolumeClaim:
-            claimName: root-disk
-        - name: cloud-init
-          cloudInitConfigDrive:
-            userData: |
-              #!/bin/sh
-              echo "Running user-data script"
-  dataVolumeTemplates:
-    - metadata:
-        name: root-disk
-        annotations:
-          cdi.kubevirt.io/storage.checkStaticVolume: "true"
-        labels:
-          appname: vm
-      spec:
-        storage:
-          accessModes:
-            - ReadWriteMany
-          # Customize in your overlay.
-          storageClassName: ocs-storagecluster-ceph-rbd-virtualization
-          resources:
-            requests:
-              storage: 128Mi
-        source:
-          registry:
-             certConfigMap: user-ca-bundle
-             secretRef: quayadmin
-             url: 'docker://r8-ru26-w-l.quay-service.fusion.tadn.ibm.com:8443/ocsci-image/nirsof/cirros:0.6.2-1'
+      - name: root-disk
+        persistentVolumeClaim:
+          claimName: root-disk
+      - cloudInitConfigDrive:
+          userData: |
+            #!/bin/sh
+            echo "Running user-data script"
+        name: cloud-init
