Added user details to the vm workload yaml
Signed-off-by: Amrita Mahapatra <49347640+amr1ta@users.noreply.github.com>

--- a/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
+++ b/ocs_ci/templates/cnv-vm-workload/cnv_vm_workload_for_disconnected_hci_rack.yaml
@@ -67,4 +67,7 @@ spec:
           userData: |
             #!/bin/sh
             echo "Running user-data script"
+            user: cirros
+            password: gocubsgo
+            chpasswd: { expire: False }
         name: cloud-init
